# DssPyLib

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: workflow.yml
DssPyLib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Examples/1_Electrostatic/1_Field_at_a_point_due_to_single_point_source/: Input.py  main.py
Examples/1_Electrostatic/2_Force_on_two_circular_sources/: Get.py  Input.py  main.py
Examples/2_Magnetostatic/1_Field_at_a_point_due_to_single_point_source/: Get.py  Input.py  Output.py  main.py
src/DssPyLib/: Mesh.py
src/DssPyLib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/DssPyLib/Domains/: Domain.py  Ellipse.py  Point.py
src/DssPyLib/Solvers/: Electrostatic.py  Solve.py
