# setup.cfg file at the root directory
[metadata]
name = DssPyLib
version = 0.2.4
author = Nithin Goona
description = 2-D Finite Element Package
long_description = Python package for calculating 2-D integral and finite element numerical solutions for Poisson equation with simple non-overlapping shapes. The package provides additional support to apply Distributed Source Scheme.
url = https://github.com/nithingoona/dsspylib
keywords = fem, softwareX, Poisson equation
[options]
python_requires = >=3.8, <4
install_requires = 
    numpy>=1.23.1
    joblib>=1.1.0
    matplotlib>=3.5.2
    scipy>=1.8.1
